Remove static by using the Language Context