@@ -54,6 +54,11 @@
             <artifactId>nativeimage</artifactId>
             <version>${truffle.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.polyglot</groupId>
+            <artifactId>polyglot</artifactId>
+            <version>${truffle.version}</version>
+        </dependency>
 
         <!-- Eclipse Collections -->
         <dependency>
@@ -117,6 +122,10 @@
                 <version>3.5.4</version>
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
+                    <argLine>
+                        --add-opens=java.base/sun.misc=ALL-UNNAMED
+                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <!-- Fat JAR -->
